--- a/mobile/src/main/res/menu/navigation.xml
+++ b/mobile/src/main/res/menu/navigation.xml
@@ -11,4 +11,9 @@
         android:icon="@drawable/ic_dashboard_black_24dp"
         android:title="@string/tab2" />
 
+    <item
+        android:id="@+id/navigation_calc"
+        android:icon="@drawable/ic_notifications_black_24dp"
+        android:title="@string/tab3" />
+
 </menu>
